rename as config.json

--- a/config.example.json
+++ b/config.example.json
@@ -7,6 +7,7 @@
   },
   "watson": {
     "username": "YOUR WATSON USERNAME",
-    "password": "YOUR WATSON PASSWORD"
+    "password": "YOUR WATSON PASSWORD",
+    "limit": 3
   }
 }
