Use new Watson API (#2)
* use new watson api

* Convert api_keys to a JSON file

* setup.py for py2exe

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 *.sublime-project
 *.sublime-workspace
-api_keys.py
+config.json
 *.csv
 *.pyc
 usernames.txt
+venv/
+*.log
+Include/
+Lib/
+Scripts/
+tcl/
+dist/
+build/
